// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage  Debe mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined "
>
  <img
    alt="Product Image"
    className="productImg undefined"
    src="./coffe-mug.png"
  />
</div>
`;

exports[`ProductImage debe mostrar el componente correctamte con la imagen 1`] = `
<img
  alt="Product Image"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;
